--- a/tst/Tlabs.JobCntrl.Tests.csproj
+++ b/tst/Tlabs.JobCntrl.Tests.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <ProjectReference Include="../src/Tlabs.JobCntrl.csproj" />
+
+    <Content Include="appsettings.json" CopyToOutputDirectory="PreserveNewest"/>
   </ItemGroup>
 
   <ItemGroup>
