--- a/src/Tlabs.JobCntrl.csproj
+++ b/src/Tlabs.JobCntrl.csproj
@@ -1,22 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>1.0.0-alpha</VersionPrefix>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <OutputType>Library</OutputType>
     <RuntimeFrameworkVersion>2.1.0</RuntimeFrameworkVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
-    <Description>A concrete implementation of a `Tlabs.Data.IDataStore` based on EF Core.</Description>
+    <Description>Background job control runtime and framework.</Description>
     <Authors>Tlabs</Authors>
-    <PackageLicenseUrl>https://bitbucket.org/tlabster/tlabs.efdatastore/src/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://bitbucket.org/tlabster/tlabs.efdatastore</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
+    <PackageProjectUrl>https://bitbucket.org/tlabster/tlabs.jobcntrl</PackageProjectUrl>
   </PropertyGroup>
 
 
   <ItemGroup>
     <ProjectReference Include="../../Tlabs.Core/src/Tlabs.Core.csproj" />
     <ProjectReference Include="../../Tlabs.Data/src/Tlabs.Data.csproj" />
+
+    <None Include="LICENSE" Pack="true" PackagePath=""/>
   </ItemGroup>
 
   <ItemGroup>
