--- a/tst/Tlabs.JobCntrl.Tests.csproj
+++ b/tst/Tlabs.JobCntrl.Tests.csproj
@@ -10,8 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="../src/Tlabs.JobCntrl.csproj" />
 
-    <Content Include="appsettings.json" CopyToOutputDirectory="PreserveNewest"/>
-    <Content Include="JobCntrlConfig.json" CopyToOutputDirectory="PreserveNewest"/>
+    <Content Include="*.json" CopyToOutputDirectory="PreserveNewest"/>
   </ItemGroup>
 
   <ItemGroup>
