--- a/tst/Tlabs.JobCntrl.Tests.csproj
+++ b/tst/Tlabs.JobCntrl.Tests.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.*" />
     <PackageReference Include="Moq" Version="4.7.*"/>
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.*" />
   </ItemGroup>
 
 </Project>
