--- a/src/Tlabs.JobCntrl.csproj
+++ b/src/Tlabs.JobCntrl.csproj
@@ -1,20 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <VersionPrefix>1.3.5</VersionPrefix>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <VersionPrefix>2.0.1</VersionPrefix>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <RuntimeFrameworkVersion>2.1.0</RuntimeFrameworkVersion>
+    <RuntimeFrameworkVersion>5.0.0</RuntimeFrameworkVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
     <Description>Background job control runtime and framework.</Description>
     <Authors>Tlabs</Authors>
-<!--
-    ** until supported with all SDK versions....
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
--->
-    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <IsPackable>true</IsPackable>
+    <PackageLicenseExpression>LGPL-3.0-only</PackageLicenseExpression>
     <PackageProjectUrl>https://bitbucket.org/tlabster/tlabs.jobcntrl</PackageProjectUrl>
   </PropertyGroup>
 
@@ -24,10 +23,6 @@
     <ProjectReference Include="../../Tlabs.Data/src/Tlabs.Data.csproj" />
 
     <None Include="LICENSE" Pack="true" PackagePath=""/>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.*" />
   </ItemGroup>
 
 </Project>
