--- a/tst/Tlabs.JobCntrl.Tests.csproj
+++ b/tst/Tlabs.JobCntrl.Tests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
 
     <CollectCoverage>true</CollectCoverage>
@@ -14,13 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.msbuild" Version="2.3.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.*" />
+    <PackageReference Include="Moq" Version="4.16.*"/>
+    <PackageReference Include="coverlet.msbuild" Version="3.0.*" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.*" />
     <PackageReference Include="xunit" Version="2.4.*" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.*" />
-    <PackageReference Include="Moq" Version="4.7.*"/>
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.*" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.*" />
   </ItemGroup>
 
 </Project>
