squash merge autoProcess

--- a/src/Tlabs.JobCntrl.csproj
+++ b/src/Tlabs.JobCntrl.csproj
@@ -9,6 +9,15 @@
 
     <Description>Background job control runtime and framework.</Description>
     <Authors>Tlabs</Authors>
+
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisLevel>6</AnalysisLevel>
+    <AnalysisMode>Recommended</AnalysisMode>
+    <AnalysisModeSecurity>All</AnalysisModeSecurity>
+    <AnalysisModeNaming>None</AnalysisModeNaming>
+    <!--
+    <AnalysisLevel>6-recommended</AnalysisLevel>
+    -->
   </PropertyGroup>
 
   <PropertyGroup>
