--- a/src/Tlabs.JobCntrl.csproj
+++ b/src/Tlabs.JobCntrl.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>2.1.3</VersionPrefix>
+    <VersionPrefix>2.1.4</VersionPrefix>
     <TargetFramework>net6.0</TargetFramework>
     <OutputType>Library</OutputType>
     <!--<RuntimeFrameworkVersion>6.0.1</RuntimeFrameworkVersion>-->
@@ -23,7 +23,7 @@
   <PropertyGroup>
     <IsPackable>true</IsPackable>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://bitbucket.org/tlabster/tlabs.jobcntrl</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/tlabster/tlabs.jobcntrl</PackageProjectUrl>
   </PropertyGroup>
 
 
