--- a/.gitignore
+++ b/.gitignore
@@ -233,5 +233,7 @@ _Pvt_Extensions
 # FAKE - F# Make
 .fake/
 
-# coverlet test code coverage
-tst/coverage.json
+# temporary or generated
+__*
+#Coverage
+tst/**/coverage.json
