--- a/tst/Tlabs.JobCntrl.Tests.csproj
+++ b/tst/Tlabs.JobCntrl.Tests.csproj
@@ -1,10 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
 
     <EnableNETAnalyzers>false</EnableNETAnalyzers>
     <CollectCoverage>true</CollectCoverage>
+    <CoverletOutput>__coverage/lcov.info</CoverletOutput>
+    <CoverletOutputFormat>lcov</CoverletOutputFormat>
+    <ExcludeByFile>**/*.g.cs</ExcludeByFile>
     <Include>[Tlabs.JobCntrl]*</Include>
   </PropertyGroup>
 
@@ -26,6 +29,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="ReportGenerator" Version="5.2.*" PrivateAssets="All"/>
   </ItemGroup>
+  <Target Name="GenerateHtmlCoverageReport" AfterTargets="GenerateCoverageResultAfterTest">
+    <ReportGenerator ReportFiles="@(CoverletReport)" TargetDirectory="__coverage/html" ReportTypes="HtmlInline_AzurePipelines_Dark" />
+  </Target>
 
 </Project>
